Task 2: Fix content behind the nav

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,6 +25,7 @@ main {
   width: 450px;
   background-color: white;
   display: block;
+  margin-top: 140px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
